Apply .gitignore and remove build artifacts